--- a/css/details.css
+++ b/css/details.css
@@ -1,6 +1,3 @@
-.wrapper-details{
-
-}
 .titleD{
 	margin-top: 65px;
 	display: flex;
@@ -10,7 +7,17 @@
 .equal-height{
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	justify-content: center;
+}
+.item img{
+	display: inline-block;
+	justify-content: center;
+	text-align: center;
+	width: 160px !important;
+	height: auto;
+}
+.item p, .item2 p{
+	padding: 8px;
 }
 .item{
 	justify-content: space-between;
@@ -28,4 +35,24 @@
 .materials-a{
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: center;
+}
+.item2{
+	justify-content: space-between;
+	height: 300px;
+	width: 250px;
+	border: 2px solid red;
+	margin: 10px;
+	text-align: center;
+	padding: 10px;
+}
+.item2 h2{
+	font-size: 22px;
+	font-weight: bold;
+}
+.wrapper-details p{
+	display: flex;
+	margin-top: 15px;
+	text-align: center;
+	font-size: 20px;
 }
