--- a/css/admin.css
+++ b/css/admin.css
@@ -3,12 +3,12 @@
 	flex-wrap: wrap;
 }
 .crud{
-	border: 1px solid black;
+	border: 3px solid black;
 	border-radius: 20px;
 	margin: 10px;
 	flex-basis: 0;
 	flex-grow: 1;
-	height: 300px;
+	/*height: auto;*/
 	padding: 25px;
 }
 .mt{
